WexGit/Wex_DX/force-app/main/default/objects/VUserProfileOrg__mdt/fields/AsiaUPO__c.field-meta.xml
<CustomField>
    <fullName>AsiaUPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asia</label>
    <type>Checkbox</type>
</CustomField>