WexGit/Wex_DX/force-app/main/default/objects/VUserProfileOrg__mdt/fields/AuUPO__c.field-meta.xml
<CustomField>
    <fullName>AuUPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AU</label>
    <type>Checkbox</type>
</CustomField>