WexGit/Wex_DX/force-app/main/default/objects/VUserProfileOrg__mdt/fields/EuUPO__c.field-meta.xml
<CustomField>
    <fullName>EuUPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EU</label>
    <type>Checkbox</type>
</CustomField>