WexGit/Wex_DX/force-app/main/default/objects/VUserProfileOrg__mdt/fields/ImplementationUPO__c.field-meta.xml
<CustomField>
    <fullName>ImplementationUPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation</label>
    <type>Checkbox</type>
</CustomField>