WexGit/Wex_DX/force-app/main/default/objects/VUserProfileOrg__mdt/fields/NaUPO__c.field-meta.xml
<CustomField>
    <fullName>NaUPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NA</label>
    <type>Checkbox</type>
</CustomField>