WexGit/Wex_DX/force-app/main/default/objects/VUserProfileOrg__mdt/fields/RmUPO__c.field-meta.xml
<CustomField>
    <fullName>RmUPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM</label>
    <type>Checkbox</type>
</CustomField>