WexGit/Wex_DX/force-app/main/default/objects/VUserProfileOrg__mdt/fields/SalesUPO__c.field-meta.xml
<CustomField>
    <fullName>SalesUPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales</label>
    <type>Checkbox</type>
</CustomField>