WexGit/Wex_DX/force-app/main/default/objects/VUserProfileOrg__mdt/fields/UpoLocation__c.field-meta.xml
<CustomField>
    <fullName>UpoLocation__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Org</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>